# discord-serenity-bot

./: .gitignore  Cargo.toml  Dockerfile  README.MD  deploy.sh
.github/workflows/: main.yml
data/birthday/: data.json  users.json
data/welcome_farewell/: data.json
json/: server-start.json  server-stop.json
src/: main.rs
src/commands/: dummy.rs  mod.rs  playlist.rs  playlist_old.rs
src/commands/dummy/: dummy.rs
src/commands/events/: leave_channel.rs  mod.rs
src/commands/functions/: mod.rs  track_fun.rs
src/commands/playlist/: clear.rs  loop_song.rs  mod.rs  now_playing.rs  play.rs  resume.rs  skip.rs  stop.rs
src/commands/voice_channel/: join.rs  leave.rs
src/data/birthday/: data.json  users.json
src/models/: mod.rs  welcome_farewell.rs
src/utils/: common.rs  embed.rs  mod.rs
src/workers/: birthday.rs  mod.rs  structs.rs
