[package]
name = "yt-dl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = { version = "0.4.0", features = ["builtin-queue"] }
reqwest = { version = "0.11", features = ["json"] }
serenity = "0.12"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
symphonia = { version = "0.5.3", features = ["mp3"] }