[package]
name = "yt-dl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = { version = "0.4.1", features = ["builtin-queue"] }
reqwest = { version = "0.11", features = ["json"] }
serenity = "0.12"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
symphonia = { version = "0.5.3", features = ["mp3"] }
tokio-cron-scheduler = "0.9.4"
chrono = "0.4.31"
serde_json = "1.0.116"
serde = "1.0.200"
rand = "0.8.5"